Fixed more tables on Mobile

--- a/client/src/components/tables/ClosedTasks.module.css
+++ b/client/src/components/tables/ClosedTasks.module.css
@@ -1,17 +1,17 @@
 .closedTasksHeader ul li:nth-child(1), .closedTasksBody div ul li:nth-child(1) {
-    width: 6%;
+    width: 10%;
 }
 
 .closedTasksHeader ul li:nth-child(2), .closedTasksBody div ul li:nth-child(2) {
-    width: 13%;
+    width: 30%;
 }
 
 .closedTasksHeader ul li:nth-child(3), .closedTasksBody div ul li:nth-child(3) {
-    width: 18%;
+    width: 20%;
 }
 
 .closedTasksHeader ul li:nth-child(4), .closedTasksBody div ul li:nth-child(4) {
-    width: 25%;
+    width: 20%;
 }
 
 .closedTasksHeader ul li:nth-child(5), .closedTasksBody div ul li:nth-child(5) {
@@ -20,6 +20,11 @@
 
 .mobileTable {
     display: none;
+}
+
+.opgaveVirksomhedNavn {
+    font-size: 0.65rem;
+    color: #696969;
 }
 
 @media (max-width: 750px) {
